[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/CustomCheckBox.gd" type="Script" id=1]
[ext_resource path="res://scripts/Controller.gd" type="Script" id=2]


[node name="Run" type="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 2 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer9" type="HBoxContainer" parent="VBoxContainer2"]
margin_right = 1016.0
margin_bottom = 20.0

[node name="Control3" type="Control" parent="VBoxContainer2/HBoxContainer9"]
margin_right = 15.0
margin_bottom = 20.0
rect_min_size = Vector2( 15, 0 )

[node name="FPS30" type="Button" parent="VBoxContainer2/HBoxContainer9"]
unique_name_in_owner = true
self_modulate = Color( 0.784314, 0.917647, 1, 1 )
margin_left = 19.0
margin_right = 997.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 3
toggle_mode = true
enabled_focus_mode = 0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer9/FPS30"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Patch with 30fps (default 60)"
align = 1
valign = 1

[node name="CheckBox" type="CheckBox" parent="VBoxContainer2/HBoxContainer9/FPS30"]
anchor_right = 1.0

[node name="Control2" type="Control" parent="VBoxContainer2/HBoxContainer9"]
margin_left = 1001.0
margin_right = 1016.0
margin_bottom = 20.0
rect_min_size = Vector2( 15, 0 )

[node name="Control5" type="Control" parent="VBoxContainer2"]
margin_top = 24.0
margin_right = 1016.0
margin_bottom = 24.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 28.0
margin_right = 1016.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.63

[node name="Control2" type="Control" parent="VBoxContainer2/HBoxContainer"]
margin_right = 15.0
margin_bottom = 104.0
rect_min_size = Vector2( 15, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/HBoxContainer"]
margin_left = 19.0
margin_right = 496.0
margin_bottom = 104.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_right = 477.0
margin_bottom = 20.0

[node name="SkipBios" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
self_modulate = Color( 0.784314, 0.917647, 1, 1 )
margin_right = 477.0
margin_bottom = 20.0
size_flags_horizontal = 3
toggle_mode = true
script = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/SkipBios"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Skip Bios copy"
align = 1
valign = 1

[node name="CheckBox" type="CheckBox" parent="VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/SkipBios"]
anchor_right = 1.0

[node name="Control8" type="Control" parent="VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 477.0
margin_bottom = 24.0

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 477.0
margin_bottom = 48.0

[node name="SkipDuckStation" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer6"]
unique_name_in_owner = true
self_modulate = Color( 0.784314, 0.917647, 1, 1 )
margin_right = 477.0
margin_bottom = 20.0
size_flags_horizontal = 3
toggle_mode = true
script = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer6/SkipDuckStation"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Skip check for download and install of duckstation"
align = 1
valign = 1

[node name="CheckBox" type="CheckBox" parent="VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer6/SkipDuckStation"]
anchor_right = 1.0

[node name="Control7" type="Control" parent="VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 477.0
margin_bottom = 52.0

[node name="HBoxContainer7" type="HBoxContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 477.0
margin_bottom = 76.0

[node name="SkipGameSettings" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer7"]
unique_name_in_owner = true
self_modulate = Color( 0.784314, 0.917647, 1, 1 )
margin_right = 477.0
margin_bottom = 20.0
size_flags_horizontal = 3
toggle_mode = true
script = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer7/SkipGameSettings"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Skip check for download and install of gamesettings"
align = 1
valign = 1

[node name="CheckBox" type="CheckBox" parent="VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer7/SkipGameSettings"]
anchor_right = 1.0

[node name="Control6" type="Control" parent="VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 477.0
margin_bottom = 80.0

[node name="HBoxContainer8" type="HBoxContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 477.0
margin_bottom = 104.0

[node name="SkipXDelta" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer8"]
unique_name_in_owner = true
self_modulate = Color( 0.784314, 0.917647, 1, 1 )
margin_right = 477.0
margin_bottom = 20.0
size_flags_horizontal = 3
toggle_mode = true
script = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer8/SkipXDelta"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "    Skip check for download and install of xdelta (might glitch patch step)"
align = 1
valign = 1

[node name="CheckBox" type="CheckBox" parent="VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer8/SkipXDelta"]
anchor_right = 1.0

[node name="Control" type="Control" parent="VBoxContainer2/HBoxContainer"]
margin_left = 500.0
margin_right = 515.0
margin_bottom = 104.0
rect_min_size = Vector2( 15, 0 )

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer2/HBoxContainer"]
margin_left = 519.0
margin_right = 997.0
margin_bottom = 104.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer2"]
margin_right = 478.0
margin_bottom = 20.0

[node name="ForceBios" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
self_modulate = Color( 0.784314, 0.917647, 1, 1 )
margin_right = 478.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 3
toggle_mode = true
enabled_focus_mode = 0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer/ForceBios"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Force Bios copy"
align = 1
valign = 1

[node name="CheckBox" type="CheckBox" parent="VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer/ForceBios"]
anchor_right = 1.0

[node name="Control6" type="Control" parent="VBoxContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 24.0
margin_right = 478.0
margin_bottom = 24.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 28.0
margin_right = 478.0
margin_bottom = 48.0

[node name="ForceDuckStation" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
self_modulate = Color( 0.784314, 0.917647, 1, 1 )
margin_right = 478.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 3
toggle_mode = true
enabled_focus_mode = 0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer2/ForceDuckStation"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Force check for download and install of duckstation"
align = 1
valign = 1

[node name="CheckBox" type="CheckBox" parent="VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer2/ForceDuckStation"]
anchor_right = 1.0

[node name="Control5" type="Control" parent="VBoxContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 52.0
margin_right = 478.0
margin_bottom = 52.0

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 56.0
margin_right = 478.0
margin_bottom = 76.0

[node name="ForceGameSettings" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer3"]
unique_name_in_owner = true
self_modulate = Color( 0.784314, 0.917647, 1, 1 )
margin_right = 478.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 3
toggle_mode = true
enabled_focus_mode = 0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer3/ForceGameSettings"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Force check for download and install of gamesettings"
align = 1
valign = 1

[node name="CheckBox" type="CheckBox" parent="VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer3/ForceGameSettings"]
anchor_right = 1.0

[node name="Control4" type="Control" parent="VBoxContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 80.0
margin_right = 478.0
margin_bottom = 80.0

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 84.0
margin_right = 478.0
margin_bottom = 104.0

[node name="ForceXDelta" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer4"]
unique_name_in_owner = true
self_modulate = Color( 0.784314, 0.917647, 1, 1 )
margin_right = 478.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 3
toggle_mode = true
enabled_focus_mode = 0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer4/ForceXDelta"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Force check for download and install of xdelta"
align = 1
valign = 1

[node name="CheckBox" type="CheckBox" parent="VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer4/ForceXDelta"]
anchor_right = 1.0

[node name="Control3" type="Control" parent="VBoxContainer2/HBoxContainer"]
margin_left = 1001.0
margin_right = 1016.0
margin_bottom = 104.0
rect_min_size = Vector2( 15, 0 )

[node name="Control4" type="Control" parent="VBoxContainer2"]
margin_top = 136.0
margin_right = 1016.0
margin_bottom = 136.0

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 140.0
margin_right = 1016.0
margin_bottom = 160.0

[node name="Control4" type="Control" parent="VBoxContainer2/HBoxContainer6"]
margin_right = 15.0
margin_bottom = 20.0
rect_min_size = Vector2( 15, 0 )

[node name="ForceUpdate" type="Button" parent="VBoxContainer2/HBoxContainer6"]
unique_name_in_owner = true
self_modulate = Color( 0.784314, 0.917647, 1, 1 )
margin_left = 19.0
margin_right = 997.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 3
toggle_mode = true
enabled_focus_mode = 0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer6/ForceUpdate"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Force check for download and update of CTROnline"
align = 1
valign = 1

[node name="CheckBox" type="CheckBox" parent="VBoxContainer2/HBoxContainer6/ForceUpdate"]
anchor_right = 1.0

[node name="Control3" type="Control" parent="VBoxContainer2/HBoxContainer6"]
margin_left = 1001.0
margin_right = 1016.0
margin_bottom = 20.0
rect_min_size = Vector2( 15, 0 )

[node name="Control6" type="Control" parent="VBoxContainer2"]
margin_top = 164.0
margin_right = 1016.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 3
